--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependecies
-        run: npm install
+      - name: Change to project directory
+        run: cd PrimerParcial-Electiva2/PrimerParcial-Electiva2
+
+      - name: Install dependencies
+        run: |
+          cd PrimerParcial-Electiva2/PrimerParcial-Electiva2
+          npm install
+
+      - name: Build application (opcional)
+        run: |
+          cd PrimerParcial-Electiva2/PrimerParcial-Electiva2
+          npm run build  # Si es necesario
 
       - name: Deploy to Surge
         env:
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
         run: |
-          npx surge ./src manudls-pl.surge.sh --token $SURGE_TOKEN
+          npx surge ./build manudls-pl.surge.sh --token $SURGE_TOKEN  # Ajusta si es necesario
