--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install --prefix PrimerParcial-Electiva2/PrimerParcial-Electiva2
+        run: npm install --prefix PrimerParcial-Electiva2
 
       - name: Build application (opcional)
-        run: npm run build --prefix PrimerParcial-Electiva2/PrimerParcial-Electiva2 # Si es necesario
+        run: npm run build --prefix PrimerParcial-Electiva2 # Si es necesario
 
       - name: Deploy to Surge
         env:
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
         run: |
-          npx surge PrimerParcial-Electiva2/PrimerParcial-Electiva2/build manudls-pl.surge.sh --token $SURGE_TOKEN  # Ajusta si es necesario
+          npx surge PrimerParcial-Electiva2/build manudls-pl.surge.sh --token $SURGE_TOKEN  # Ajusta si es necesario
